kubernetes/donation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation-deploy
  namespace: donation-service
  labels:
    app: donation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: donation-service
  template:
    metadata:
      labels:
        app: donation-service
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/path: "/metrics"  
    spec:
      containers:
        - name: donation-service
          image: 498686972093.dkr.ecr.us-east-1.amazonaws.com/tech5/donation-service:2eea4b3e4554b1256c78cd014b3c90416f14a644
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "50m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1001
            capabilities:
              drop:
                - ALL
