kubernetes/donation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donation-ingress
  namespace: donation-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /donation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: donation-service-clusterip
                port:
                  number: 8082
